--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <p>This is a false statement. 
   </section>
   
-  <a href="http://corn-hub.blogspot.com/">Where does this link take me??? Can anyone figure out why it's not working?</a>
+  <a href="http://corn-hub.blogspot.com/" target="_blank">Where does this link take me??? Can anyone figure out why it's not working?</a>
   
 
 
