--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <p>This is a false statement. 
   </section>
   
-  <a href="https://ahmogilner.github.io/ECS8th2018_2019/" target="_blank">Where does this link take me??? Can anyone figure out why it's not working?</a>
+  <a href="https://ahmogilner.github.io/ECS8th2018_2019/" target="_blank" title="My ECS subpage for this year!>click me</a>
   
 
 
