--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<!doctype html>
+<html>
+  Hell world.
+  Welcome to my first website.
+  <br>
+  <a href="https://ahmogilner.github.io/ECS8th2018_2019/index.html">Click here for my cool projects</a>
+  
+</html>
