--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
 <html>
   <a href="https://ahmogilner.github.io/ECS8th2018_2019/postcard">wow, very cool</a>
+  <a href="/"> click here to go back home</a>
 </html>
