--- a/ECS8th2018_2019/postcard/index.html
+++ b/ECS8th2018_2019/postcard/index.html
@@ -51,9 +51,10 @@
     <p>Do you know that I love almond milk?
     <p>Get the box of Freezepops from target for $4.99
     <p>This is a false statement. 
+    <p><a href="https://ahmogilner.github.io/ECS8th2018_2019/" target="_blank" title="My ECS subpage for this year!">click me</a>
   </section>
   
-  <a href="https://ahmogilner.github.io/ECS8th2018_2019/" target="_blank" title="My ECS subpage for this year!">click me</a>
+  
   
 
 
