--- a/ECS8th2018_2019/postcard/index.html
+++ b/ECS8th2018_2019/postcard/index.html
@@ -51,7 +51,7 @@
     <p>Do you know that I love almond milk?
     <p>Get the box of Freezepops from target for $4.99
     <p>This is a false statement. 
-    <p><a href="https://ahmogilner.github.io/ECS8th2018_2019/" target="_blank" title="My ECS subpage for this year!">click me</a>
+    <p><a href="https://ahmogilner.github.io" target="_blank" title="My ECS subpage for this year!">click me</a>
   </section>
   
   
