--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   Welcome to my first website.
   <br>
   <a href="https://ahmogilner.github.io/ECS8th2018_2019/index.html">Click here for my cool projects</a>
+  <a href="/ECS8th2018_2019/index.html">This too</a>
   
 </html>
