--- a/ECS8th2018_2019/postcard/index.html
+++ b/ECS8th2018_2019/postcard/index.html
@@ -46,11 +46,11 @@
     <h3>From:</h3>
     <p>Aaron Mogilner
     <h3>Date:</h3>
-    <p>12/3/18
+    <p>12/11/18
     <h3>Message:</h3>
-    <p>Do you know that I love almond milk?
-    <p>Get the box of Freezepops from target for $4.99
-    <p>This is a false statement. 
+    <p>why don't they have human food for things that aren't humans?
+    <p>Buy pizza for a dog
+    <p>I enjoy multiple varieties of cheeses 
     <p><a href="https://ahmogilner.github.io" target="_blank" title="My ECS subpage for this year!">click me</a>
   </section>
   
