--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <br>
   <a href="https://ahmogilner.github.io/ECS8th2018_2019/index.html">Click here for my cool projects</a>
   <a href="/ECS8th2018_2019/index.html">This too</a>
+  <a href="ahmogilner.github.io/ECS8th2018_2019/myfavorites">go here to see my favorite funny man</a>
   
 </html>
