--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -2,4 +2,5 @@
 <html>
   <a href="https://ahmogilner.github.io/ECS8th2018_2019/postcard">wow, very cool</a>
   <a href="/"> click here to go back home</a>
+  <a href="ahmogilner.github.io/ECS8th2018_2019/myfavorites" target="_blank">go here to see my favorite funny man</a>
 </html>
