--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!doctype html>
 <html>
-  Hell world.
+  <head>
+   <meta name="viewport" content=""width=device-width">
+   <title>Aaron's cool website</title>
+ </head>
+  Hello world.
+                                                      <br>
   Welcome to my first website.
   <br>
   <a href="https://ahmogilner.github.io/ECS8th2018_2019/index.html" target="_blank">Click here for my cool projects</a>
+<br>
   <a href="/ECS8th2018_2019/index.html" target="_blank">This too</a>
   
   
