--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html>
+  <head>
+    <title>My cool project</title>
+    <meta name="viewport" content="width=device-width">
+  </head>
   <a href="https://ahmogilner.github.io/ECS8th2018_2019/postcard" target="_blank">wow, very cool</a>
+  <br>
   <a href="/"> click here to go back home</a>
-  <a href="ahmogilner.github.io/ECS8th2018_2019/myfavorites/funnyman" target="_blank">go here to see my favorite funny man</a>
+<br>
+  <a href="https://ahmogilner.github.io/ECS8th2018_2019/myfavorites/funnyman" target="_blank">go here to see my favorite funny man</a>
 </html>
