--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
    <meta name="viewport" content=""width=device-width">
    <title>Aaron's cool website</title>
  </head>
+<header>
+                                                      <h2>My first website</h2>
+                                                      </header>
   Hello world.
                                                       <br>
   Welcome to my first website.
