--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>My cool project</title>
+    <title>My cool projects</title>
     <meta name="viewport" content="width=device-width">
   </head>
+  <header>
+    <h2>my cool projects</h2>
+  </header>
   <a href="https://ahmogilner.github.io/ECS8th2018_2019/postcard" target="_blank">wow, very cool</a>
   <br>
   <a href="/"> click here to go back home</a>
