--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
   <head>
    <meta name="viewport" content=""width=device-width">
    <title>Aaron's cool website</title>
+           <!--    <style>
+          a { /*a, h1, h2 are called selectors
+                selecting what to style or decorate*/
+             font-color: red  /*font-color is a property name
+                                red is property value*/
+          }  
+            
+          h1, h2 {
+             font-color: blue     
+          }             
+        </style>           You can put CSS code locally in your HTML code like this; 
+                            However, we are going to link a css file using <link>-->
  </head>
 <header>
                                                       <h2>My first website</h2>
