--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
           }             
         </style>
  </head>
-<header>
+<body>
+                                                      <header>
                                                       <h2>My first website</h2>
                                                       </header>
   Hello world.
@@ -24,5 +25,5 @@
 <br>
   <a href="/ECS8th2018_2019/index.html" target="_blank">This too</a>
   
-  
+                                                       </body>
 </html>
