--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
    <meta name="viewport" content=""width=device-width">
+                                                      
    <title>Aaron's cool website</title>
            <!--    <style>
           a {
@@ -11,6 +12,7 @@
           h1, h2 {
              font-color: blue     
           }             
+  <link rel="stylesheet" href="ahmogilner.github.io/main.css">
         </style>
  </head>
 <body>
