--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta name="viewport" content=""width=device-width">
                                                       
    <title>Aaron's cool website</title>
-           <!--    <style>
+          <style>
           a {
              font-color: red  /
           }  
