--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           h1, h2 {
              font-color: blue     
           }             
-  <link rel="stylesheet" href="ahmogilner.github.io/main.css">
+  <link rel="stylesheet" href="https://ahmogilner.github.io/main.css">
         </style>
  </head>
 <body>
