--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -11,5 +11,5 @@
   <br>
   <a href="/"> click here to go back home</a>
 <br>
-  <a href="https://ahmogilner.github.io/ECS8th2018_2019/myfavorites/funnyman" target="_blank">go here to see my favorite funny man</a>
+  <a href="https://ahmogilner.github.io/ECS8th2018_2019/myfavorites/index.html" target="_blank">go here to see my favorite funny man</a>
 </html>
