--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -4,12 +4,15 @@
     <title>My cool projects</title>
     <meta name="viewport" content="width=device-width">
   </head>
+<body>
   <header>
-    <h2>my cool projects</h2>
-  </header>
+  <h2>my cool projects</h2>
+</header>
   <a href="https://ahmogilner.github.io/ECS8th2018_2019/postcard" target="_blank">wow, very cool</a>
   <br>
   <a href="/"> click here to go back home</a>
-<br>
+  <br>
   <a href="https://ahmogilner.github.io/ECS8th2018_2019/myfavorites/index.html" target="_blank">go here to see my favorite funny man</a>
-</html>
+</body>
+  </html>
+  
