--- a/ECS8th2018_2019/myfavorites/index.html
+++ b/ECS8th2018_2019/myfavorites/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <meta name="viewport" description="width=device-width">
     <title>Hilarious</title>
   </head>
   <header>
