--- a/ECS8th2018_2019/myfavorites/index.html
+++ b/ECS8th2018_2019/myfavorites/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <meta name="viewport" description="width=device-width">
+    <meta name="viewport" comtent="width=device-width">
+    <meta name="description" content="I like funny man">
     <title>Hilarious</title>
   </head>
   <header>
