--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
    <meta name="viewport" content=""width=device-width">
-                                                      
+    <meta name="description" content="My cool website">                                                   
    <title>Aaron's cool website</title>
           <style>
           a {
