--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -13,7 +13,12 @@
    <br>
    <a href="/"> click here to go back home</a>
    <br>
-    <a href="https://ahmogilner.github.io/ECS8th2018_2019/myfavorites/index.html" target="_blank">go here to see my favorite funny man</a>
-  </body>
+   <a href="https://ahmogilner.github.io/ECS8th2018_2019/myfavorites/index.html" target="_blank">go here to see my favorite funny man</a>
+   <br>
+   <a href="https://ahmogilner.github.io/ECS8th2018_2019/birthday_invitation/index.html" target="_blank">go here for my cool birthday invitation</a>
+   <br>
+   <a href="https://ahmogilner.github.io/ECS8th2018_2019/player_profie/index.html" target="_blank">go here for my cool Elon Musk profile</a>
+   <a href="https://ahmogilner.github.io/ECS8th2018_2019/movie_review/index.html" target="_blank">go here for my cool movie review</a>
+   </body>
 </html>
   
