--- a/ECS8th2018_2019/movie_review/character/index.html
+++ b/ECS8th2018_2019/movie_review/character/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>Zibo the panda</title>
-<link rel="stylesheet" href="movie.css">
+<link rel="stylesheet" href="ahmogilner.github.io/ECS8th2018_2019/movie_review/main.css">
 <h1><a href="movie.html">Chop Kick Panda</a></h1>
 <img data-src="https://statici.behindthevoiceactors.com/behindthevoiceactors/_img/chars/zibo-chop-kick-panda-31.2.jpg" src="https://statici.behindthevoiceactors.com/behindthevoiceactors/_img/chars/zibo-chop-kick-panda-31.2.jpg" width="280" alt="fun" title="o">
 <h2>Zibo the panda</h2>
