--- a/about/index.html
+++ b/about/index.html
@@ -1,26 +1,44 @@
-<!doctype
-<title>Birthday Invitation</title>
-<h1>You Are invited to a birthday party</h1>
-<section>
-<link rel="stylesheet" href="/css/profile11.css">
-<h2>Details</h2>
-<strong>For:</strong> Aaron<br>
-<strong>Date:</strong> 4<sup>th</sup> of November<br>
-<strong>Time:</strong> 6:00 am<br>
-<strong>Place:</strong> Chuck-E-Cheese<br>
-<h2>What to bring</h2>
-<p>deez nuts for purposes involving deez and nuts
-<p>The cheese for the chucking and the E
-<h2>My Wishlist</h2>
-<p>I want these things or i will come to your house and extract your essence
-<ul>
-  <li><a target="_blank" href="https://www.viennabeef.com/">hotdogs</a>
-  <li><a target="_blank" href="https://www.eonline.com/">E</a>
-  <li><a target="_blank" href="https://www.cheese.com/">cheese</a>
-  <li><a target="_blank" href="https://www.imdb.com/title/tt0934814/">chuck</a>
-  <li><a target="_blank" href="https://www.christianity.com/jesus/">jesus</a>
-</ul>
-<hr>
-<p>Hope to see you there
-</section>
-<p><img data-src="/images/party1.png" src="/images/party1.png" alt="dam" title="wow, very cool">
+<!doctype html>
+<html>
+  <head>
+   <title>About Me</title>
+   <meta name="viewport" content=""width=device-width">
+   <meta name="description" content="About the creator">                                                   
+   <link rel="stylesheet" href="https://ahmogilner.github.io/main.css">
+  </head>
+  <body>
+    <h1>facts about me</h1>
+    <h2>Introduction</h2>
+    <ul>
+      <li>My name is Aaron Henry Mogilner
+      <li>I was born in Chicago, Illinois on June 17<sup>th</sup> 2004
+      <li>I was named after my great grandfather, Aaron Henry Paul.
+      <li>I live in Lincoln Park
+      </ul>
+    <hr>
+    <h2>Childhood</h2>
+    <ul>
+      <li>I attended Alcott Elementary School in Lincoln  Park
+      <li>My first friend was made by walking up to him and asking if he wants to be my friend, and we've been friends ever since.
+      <li>My first friend was Adam Belker
+      <li>I've always liked soccer and frisbee
+      <li>I like playing video games
+    </ul>
+    <hr>
+    <h2>High School</h2>
+    <ul>
+      <li>I'm taking Computer Science and Mandarin Chinese for my electives
+      <li>Track and Field starting January
+      <li>I enjoy any food involving tomato sauce and/or meat
+      <li>Frisbee has always been something that I've wanted to do as an extracirricular
+      <li>I hate my language class, but it's the only language my old school offered, so I would have been stupid not to take it.
+      <li>I have friends.
+    </ul>
+    <hr>
+    <h2>Future Plans</h2>
+    I honestly have no idea<br>
+    <img src="https://scontent-ort2-2.cdninstagram.com/vp/a65fafdb741db3f2d2201bffabe84358/5CB8AB8F/t51.2885-19/s320x320/33567696_206370466845501_6935479130490142720_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" title="thatsa me"
+  </body>
+</html>
+
+     
