--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -17,8 +17,9 @@
    <br>
    <a href="https://ahmogilner.github.io/ECS8th2018_2019/birthday_invitation/index.html" target="_blank">go here for my cool birthday invitation</a>
    <br>
-   <a href="https://ahmogilner.github.io/ECS8th2018_2019/player_profie/index.html" target="_blank">go here for my cool Elon Musk profile</a>
-   <a href="https://ahmogilner.github.io/ECS8th2018_2019/movie_review/index.html" target="_blank">go here for my cool movie review</a>
-   </body>
+   <a href="https://ahmogilner.github.io/ECS8th2018_2019/player_profie/index.html" target="_blank">go here for my cool Elon Musk profile</a><br>
+   <a href="https://ahmogilner.github.io/ECS8th2018_2019/movie_review/index.html" target="_blank">go here for my cool movie review</a><br>
+   <a href="https://ahmogilner.github.io/about/index.html" target="_blank">About the author</a>
+  </body>
 </html>
   
