--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -4,6 +4,7 @@
     <title>My cool projects</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="My cool projects">
+   `<link rel="stylesheet" href="https://ahmogilner.github.io/main.css">
   </head>
   <header>
     <h2>my cool projects</h2>
