--- a/ECS8th2018_2019/birthday_invitation/index.html
+++ b/ECS8th2018_2019/birthday_invitation/index.html
@@ -23,4 +23,4 @@
 <hr>
 <p>Hope to see you there
 </section>
-<p><img data-src="/images/party1.png" src="/images/party1.png" alt="dam" title="wow, very cool">
+<p><img data-src="https://codeavengers.com/images/party1.png" src="https://codeavengers.com/images/party1.png" alt="dam" title="wow, very cool">
