--- a/ECS8th2018_2019/movie_review/index.html
+++ b/ECS8th2018_2019/movie_review/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!doctype html>
 <title>Chop kick panda</title>
-<link rel="stylesheet" href="ahmogilner.github.io/ECS8th2018_2019/movie_review/main.css">
+<link rel="stylesheet" href="https://ahmogilner.github.io/ECS8th2018_2019/movie_review/main.css">
 <h1>Chop kick panda</h1>
 <img data-src="https://images-na.ssl-images-amazon.com/images/I/51e1sOjHljL.jpg" src="https://images-na.ssl-images-amazon.com/images/I/51e1sOjHljL.jpg" width="280" alt="funny haha" title="xd">
 <p><strong>Genre:</strong>Action comedy
