--- a/ECS8th2018_2019/movie_review/index.html
+++ b/ECS8th2018_2019/movie_review/index.html
@@ -14,7 +14,7 @@
 <iframe width="300" height="200" src="https://www.youtube.com/embed/FasQK1DPVW8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
 <h2>Characters</h2>
 <ul>
-  <li><a href="character.html">panda</a>
+  <li><a href="https://ahmogilner.github.io/ECS8th2018_2019/movie_review/character/index.html">panda</a>
   <li>tiger
   <li>master shifu
 </ul>
