--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
    <a href="https://ahmogilner.github.io/ECS8th2018_2019/index.html" target="_blank">Click here for my cool projects</a>
    <br>
    <a href="/ECS8th2018_2019/index.html" target="_blank">This too</a> 
+   <a href="https://ahmogilner.github.io/about/index.html" target="_blank">About the author</a>
   </body>
 </html>
