--- a/about/index.html
+++ b/about/index.html
@@ -6,8 +6,10 @@
    <meta name="description" content="About the creator">                                                   
    <link rel="stylesheet" href="https://ahmogilner.github.io/main.css">
   </head>
+  <header>
+  <h1>facts about me</h1>
+  </header>
   <body>
-    <h1>facts about me</h1>
     <h2>Introduction</h2>
     <ul>
       <li>My name is Aaron Henry Mogilner
