--- a/about/index.html
+++ b/about/index.html
@@ -40,6 +40,7 @@
     <h2>Future Plans</h2>
     I honestly have no idea<br>
     <img src="https://scontent-ort2-2.cdninstagram.com/vp/a65fafdb741db3f2d2201bffabe84358/5CB8AB8F/t51.2885-19/s320x320/33567696_206370466845501_6935479130490142720_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" title="thatsa me">
+    <a href="https://ahmogilner.github.io/index.html"> click here to go back home</a>
   </body>
 </html>
 
