--- a/ECS8th2018_2019/birthday_invitation/index.html
+++ b/ECS8th2018_2019/birthday_invitation/index.html
@@ -22,6 +22,6 @@
 </ul>
 <hr>
 <p>Hope to see you there
-<a href="https://ahmogilner.github.io/index.html"> click here to go back home</a>
+<p><a href="https://ahmogilner.github.io/index.html"> click here to go back home</a>
 </section>
 <p><img data-src="https://codeavengers.com/images/party1.png" src="https://codeavengers.com/images/party1.png" alt="dam" title="wow, very cool">
