--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <br>
    <a href="https://ahmogilner.github.io/ECS8th2018_2019/index.html" target="_blank">Click here for my cool projects</a>
    <br>
-   <a href="/ECS8th2018_2019/index.html" target="_blank">This too</a> 
+   <a href="/ECS8th2018_2019/index.html" target="_blank">This too</a> <br>
    <a href="https://ahmogilner.github.io/about/index.html" target="_blank">About the author</a>
    <a href="https://ahmogilner.github.io/contacts/index.html" target="_blank">My contacts</a>
    <img src="https://scontent-ort2-2.cdninstagram.com/vp/a65fafdb741db3f2d2201bffabe84358/5CB8AB8F/t51.2885-19/s320x320/33567696_206370466845501_6935479130490142720_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com" title="thatsa me">
