--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -21,6 +21,8 @@
    <a href="https://ahmogilner.github.io/ECS8th2018_2019/player_profie/index.html" target="_blank">go here for my cool Elon Musk profile</a><br>
    <a href="https://ahmogilner.github.io/ECS8th2018_2019/movie_review/index.html" target="_blank">go here for my cool movie review</a><br>
    <iframe src="https://drive.google.com/file/d/10-r_DNHZaKw3CjxCNum-jIc-H6VUdByf/preview" width="640" height="480"></iframe>
+   <p> When taking this class, always pay attention on how to do stuff, because it will garunteed come up later
+   <p>I learned how to code my own website
   </body>
 </html>
   
