--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
   <head>
+   <audio src="/music/good_enough.mp3" controls>
+   <p>If you are reading this, it is because your browser does not support the audio element.</p>
+   </audio>
    <meta name="viewport" content=""width=device-width">
    <meta name="description" content="My cool website">                                                   
    <title>Aaron's cool website</title>
