--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <meta name="viewport" content=""width=device-width">
    <meta name="description" content="My cool website">                                                   
    <title>Aaron's cool website</title>
-   <link rel="stylesheet" href="https://ahmogilner.github.io/main.css">
+   <link rel="stylesheet" href="https://www.ahmogilner.github.io/main.css">
   </head>
   <header>
    <h2>My first website</h2>
