--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-   <audio src="https://www.quackit.com//music/good_enough.mp3" controls>
+   <audio src="https://www.quackit.com//music/good_enough.mp3" autoplay>
    <p>If you are reading this, it is because your browser does not support the audio element.</p>
    </audio>
    <meta name="viewport" content=""width=device-width">
