--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <audio src="https://www.quackit.com//music/good_enough.mp3" autoplay>
    <p>If you are reading this, it is because your browser does not support the audio element.</p>
    </audio>
-   <meta name="viewport" content=""width=device-width">
+   <meta name="viewport" content="width=device-width">
    <meta name="description" content="My cool website">                                                   
    <title>Aaron's cool website</title>
    <link rel="stylesheet" href="https://www.ahmogilner.github.io/main.css">
