--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
   <head>
-   <audio src="https://www.quackit.com//music/good_enough.mp3" autoplay>
-   <p>If you are reading this, it is because your browser does not support the audio element.</p>
+   <audio src="http://66.90.93.122/ost/kirby-super-star-original-game-audio/ehrtcyrx/27%20gourmet%20race%20stage%201%2C%203.mp3" autoplay>
    </audio>
    <meta name="viewport" content="width=device-width">
    <meta name="description" content="My cool website">                                                   
