--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
    <title>About Me</title>
-   <meta name="viewport" content=""width=device-width">
+   <meta name="viewport" content="width=device-width">
    <meta name="description" content="About the creator">                                                   
    <link rel="stylesheet" href="https://ahmogilner.github.io/main.css">
   </head>
