--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -4,7 +4,7 @@
     <title>My cool projects</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="My cool projects">
-   `<link rel="stylesheet" href="https://ahmogilner.github.io/main.css">
+    <link rel="stylesheet" href="https://ahmogilner.github.io/main.css">
   </head>
   <header>
     <h2>my cool projects</h2>
@@ -20,6 +20,7 @@
    <br>
    <a href="https://ahmogilner.github.io/ECS8th2018_2019/player_profie/index.html" target="_blank">go here for my cool Elon Musk profile</a><br>
    <a href="https://ahmogilner.github.io/ECS8th2018_2019/movie_review/index.html" target="_blank">go here for my cool movie review</a><br>
+   <a href="https://scratch.mit.edu/projects/278065386/">My scratch project</a>
    <iframe src="https://drive.google.com/file/d/10-r_DNHZaKw3CjxCNum-jIc-H6VUdByf/preview" width="640" height="480"></iframe>
    <p> When taking this class, always pay attention on how to do stuff, because it will garunteed come up later
    <p>I learned how to code my own website
